--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
 </head> 
 <body>
-    <h1 class="your-style">Hello world</h1>
+    <h1 class="your-style">Hello world, man!</h1>
 </body>
 </html>
