--- a/index.html
+++ b/index.html
@@ -5,17 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="style.css">
-    <style>
-        .your-style {
-            font-family: 'Museo Sans Cyrl 500';
-            font-weight: normal;
-            font-style: normal;
-        }
-    </style>
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/font.css"> 
+    <link rel="stylesheet" href="css/style.min.css">
 </head> 
 <body>
-    <h1 class="your-style">Hello world, man!</h1>
+
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo">
+                    <img src="icons/logo.png" alt="logo">
+                </a>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a class="header__phone" href="tel:+74999228974">+7 (499) 922-89-74</a>
+                    <button class="button button_contacts">заказать звонок</button>
+                </div>
+            </header>
+
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>       
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/clock.png" alt="clock">
+                        <span>
+                            Время подбора:
+                            10 минут
+                        </span>
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/delivery.png" alt="delivery">
+                        <span>
+                            Бесплатная
+                            доставка
+                        </span>
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/messages.png" alt="">
+                        <span>
+                            Ответим
+                            на все вопросы
+                        </span>
+                    </div>
+                </div>    
+                <button class="button button_main">заказать консультацию</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">перейти в каталог</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
