--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/font.css"> 
+    <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.min.css">
-</head> 
+</head>
+
 <body>
 
     <div class="promo">
@@ -28,7 +30,7 @@
             </header>
 
             <div class="promo__wrapper">
-                <h1 class="promo__header">Подбор пульсометра</h1>       
+                <h1 class="promo__header">Подбор пульсометра</h1>
                 <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
                 <div class="promo__icons">
                     <div class="promo__icon">
@@ -52,7 +54,7 @@
                             на все вопросы
                         </span>
                     </div>
-                </div>    
+                </div>
                 <button class="button button_main">заказать консультацию</button>
                 <div class="promo__link">
                     или
@@ -62,5 +64,38 @@
         </div>
     </div>
 
+    <div class="advantages">
+        <div class="container">
+            <h1 class="advantages__header">Наши преимущества</h1>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="cup">
+                    <div class="advantages__subheader">Делимся опытом</div>
+                    <div class="advantages__descr">
+                        Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны,
+                        переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="heart">
+                    <div class="advantages__subheader">Заботимся о здоровье</div>
+                    <div class="advantages__descr">
+                        Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость
+                        Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="shoe">
+                    <div class="advantages__subheader">Учим бегать</div>
+                    <div class="advantages__descr">
+                        Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - 
+                        <span>I LOVE RUNNING.</span> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
