2 first screens made and apadtive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
-                    <img src="icons/logo.png" alt="logo">
+                    <img class="logo" src="icons/logo.png" alt="logo">
+                    <img class="logo_mobile" src="icons/logo_mobile.png" alt="logo_mobile">
                 </a>
                 <div class="header__official">
                     Официальный представитель
