--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <input name="name" placeholder="Ваше имя" type="text">
                 <input name="phone" placeholder="Ваш телефон" type="tel">
                 <input name="email" placeholder="Ваш email" type="email">
-                <button class="button button_submit">заказать консультацию</button>
+                <button data-modal="consultation" class="button button_submit">заказать консультацию</button>
             </form>
         </div>
     </section>
