--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
                 <button data-modal="consultation" class="button button_main">заказать консультацию</button>
                 <div class="promo__link">
                     или
-                    <a href="#">перейти в каталог</a>
+                    <a href="#catalog">перейти в каталог</a>
                 </div>
             </div>
         </div>
@@ -103,11 +103,11 @@
             <h2 class="consultation__header">Получите бесплатную консультацию <br>по подбору пульсометра </h2>
             <div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут
             </div>
-            <form class="feed-form consultation__feed-form" action="#">
-                <input name="name" placeholder="Ваше имя" type="text">
-                <input name="phone" placeholder="Ваш телефон" type="tel">
-                <input name="email" placeholder="Ваш email" type="email">
-                <button data-modal="consultation" class="button button_submit">заказать консультацию</button>
+            <form id="consultation-form" class="feed-form consultation__feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="tel">
+                <input name="email" required placeholder="Ваш email" type="email">
+                <button class="button button_submit">заказать консультацию</button>
             </form>
         </div>
     </section>
@@ -128,7 +128,7 @@
         </div>
     </section>
 
-    <section class="catalog">
+    <section id="catalog" class="catalog">
         <div class="container">
             <h2 class="catalog__title">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
@@ -469,9 +469,9 @@
                 Пульсометр Polar FT1
             </div>
             <form class="feed-form modal_feed-form" action="#">
-                <input name="name" placeholder="Ваше имя" type="text">
-                <input name="phone" placeholder="Ваш телефон" type="tel">
-                <input name="email" placeholder="Ваш email" type="email">
+                <input required name="name" placeholder="Ваше имя" type="text">
+                <input required name="phone" placeholder="Ваш телефон" type="tel">
+                <input required name="email" placeholder="Ваш email" type="email">
                 <button class="button button_submit">купить</button>
             </form>
         </div>
@@ -490,6 +490,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
+    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
