scroll and button to top added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <section class="promo">
+    <section id="top" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -486,6 +486,10 @@
             </div>
         </div>
     </div>
+
+    <a href="#top" class="up">
+        <img src="icons/up.svg" alt="up">
+    </a>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
