--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -144,7 +145,7 @@
             </ul>
 
             <div class="catalog__content catalog__content_active">
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="0s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -170,7 +171,7 @@
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="0.25s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -196,7 +197,7 @@
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="0.5s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -222,7 +223,7 @@
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="1s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -248,7 +249,7 @@
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="1.25s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -274,7 +275,7 @@
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="1.5s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -302,7 +303,7 @@
                 </div>
             </div>
             <div class="catalog__content">
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="1.75s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -330,7 +331,7 @@
                 </div>
             </div>
             <div class="catalog__content">
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="2s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -356,7 +357,7 @@
                         <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
-                <div class="catalog-item">
+                <div class="catalog-item animate__animated animate__flipInY wow" data-wow-duration="1s" data-wow-delay="2.25s">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/photo.jpg" alt="pulsometr" class="catalog-item__img">
@@ -389,7 +390,7 @@
     <section class="feed">
         <div class="container">
             <h2 class="feed__title">отзывы клиентов</h2>
-            <div class="feed__item">
+            <div class="feed__item animate__animated animate__fadeInLeft wow" data-wow-duration="1s">
                 <img src="img/irina.jpg" alt="Ирина Иванченко" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Ирина Иванченко</div>
@@ -403,7 +404,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
+            <div class="feed__item animate__animated animate__fadeInRight wow" data-wow-duration="1s">
                 <img src="img/ivan.jpg" alt="Иван Сёмочкин" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Иван Сёмочкин</div>
@@ -415,7 +416,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
+            <div class="feed__item animate__animated animate__fadeInLeft wow" data-wow-duration="1s">
                 <img src="img/julia.png" alt="Юлия Дашкина" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Юлия Дашкина</div>
@@ -496,6 +497,7 @@
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/jquery.validate.min.js"></script>
     <script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
